--- a/index.html
+++ b/index.html
@@ -3,11 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Супер сайт</title>
-<link rel="icon" href="assets/favicon.ico" type="image/x-icon" >
+    <title>Главная - супер сайт</title>
+    <meta name="description" content="Краткое описание главной страницы вашего сайта">
+    <link rel="icon" href="assets/favicon.ico" type="image/x-icon">
 </head>
 <body>
-    <h1>Заглушка</h1>
-    <p>Скоро здесь будет крутой сайт!</p>
+    <header>
+        <a href="/">Логотип или название сайта</a>
+        <nav>
+            <ul>
+                <li><a href="index.html">Главная</a></li>
+                <li><a href="about.html">О нас</a></li>
+                <li><a href="contacts.html">Контакты</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <h1>Добро пожаловать на наш сайт!</h1>
+
+        <section id="services">
+            <h2>Наши услуги</h2>
+            <p>Описание предоставляемых услуг...</p>
+            <a href="#contacts">Связаться с нами</a> 
+        </section>
+
+        <section id="portfolio">
+            <h2>Портфолио</h2>
+            <p>Примеры наших работ...</p>
+        </section>
+
+        <section id="contacts">
+            <h2>Контактная информация</h2>
+            <p>Наши контакты - голубиная почта</p>
+            <a href="contacts.html">Подробнее</a> 
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2025 Супер сайт. Все права защищены.</p>
+        <p>Телефон: +7 (905) 588-68-67</p>
+    </footer>
 </body>
 </html>
