contacts file changed

--- a/contacts.html
+++ b/contacts.html
@@ -6,6 +6,29 @@
     <title>Контакты - супер сайт</title>
 </head>
 <body>
+    <header>
+        <a href="/">Логотип или название сайта</a>
+        <nav>
+            <ul>
+                <li><a href="index.html">Главная</a></li>
+                <li><a href="about.html">О нас</a></li>
+                <li><a href="contacts.html">Контакты</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+
+        <nav aria-label="Хлебные крошки">
+            <a href="index.html">Главная</a> →
+            <span>Контакты</span>
+        </nav>
+
+        <h1>На данной странице Вы можете найти контакты</h1>
+        
+    </main>
+
+
     <footer>
         <p>&copy; 2025 Супер сайт. Все права защищены.</p>
         <p>Телефон: +7 (905) 588-68-67</p>
