paths in index.html are changed

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Главная - супер сайт</title>
     <meta name="description" content="Краткое описание главной страницы вашего сайта">
-    <link rel="stylesheet" href="src/styles.css">
-    <script src="src/main.js" defer></script>
+    <link rel="stylesheet" href="/src/styles.css">
+    <script src="/src/main.js" defer></script>
     <link rel="icon" href="assets/favicon.ico" type="image/x-icon">
 </head>
 <body>
