--- a/about.html
+++ b/about.html
@@ -3,43 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Супер сайт</title>
-<link rel="icon" href="assets/favicon.ico" type="image/x-icon" >
     <title>О нас - Супер сайт</title>
+    <link rel="stylesheet" href="/src/styles.css">
+    <link rel="icon" href="assets/favicon.ico" type="image/x-icon">
     <meta name="description" content="Узнайте больше о нашей компании и истории">
 </head>
 <body>
-    <header>
-        <a href="/">Логотип или название сайта</a>
-        <nav>
-            <ul>
-                <li><a href="index.html">Главная</a></li>
-                <li><a href="about.html">О нас</a></li>
-                <li><a href="contacts.html">Контакты</a></li>
+    <header class="header">
+        <a class="header__brand" href="/">СуперСвинки</a>
+        <nav class="nav" aria-label="Основная навигация">
+            <ul class="nav__list">
+                <li class="nav__item"><a class="nav__link" href="index.html">Главная</a></li>
+                <li class="nav__item"><a class="nav__link nav__link--active" href="about.html">О нас</a></li>
+                <li class="nav__item"><a class="nav__link" href="contacts.html">Контакты</a></li>
             </ul>
         </nav>
     </header>
 
-    <main>
-
-        <nav aria-label="Хлебные крошки">
-            <a href="index.html">Главная</a> →
-            <span>О нас</span>
+    <main class="main">
+        <nav class="breadcrumbs" aria-label="Хлебные крошки">
+            <a class="breadcrumbs__link" href="index.html">Главная</a> →
+            <span class="breadcrumbs__current">О нас</span>
         </nav>
 
         <h1>О нашей компании</h1>
-        <section>
+        
+        <section class="section">
             <h2>Наша история</h2>
             <p>Текст о том, как все начиналось...</p>
         </section>
-        <section>
+        
+        <section class="section">
             <h2>Наша команда</h2>
             <p>Текст о команде...</p>
         </section>
     </main>
 
-    <footer>
-        <p>&copy; 2025 Супер сайт. Все права защищены.</p>
+    <footer class="footer">
+        <p>&copy; 2025 СуперСвинки. Все права защищены.</p>
         <p>Телефон: +7 (905) 588-68-67</p>
     </footer>
 </body>
