--- a/contacts.html
+++ b/contacts.html
@@ -4,33 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Контакты - супер сайт</title>
+    <link rel="stylesheet" href="/src/styles.css">
 </head>
 <body>
-    <header>
-        <a href="/">Логотип или название сайта</a>
-        <nav>
-            <ul>
-                <li><a href="index.html">Главная</a></li>
-                <li><a href="about.html">О нас</a></li>
-                <li><a href="contacts.html">Контакты</a></li>
+    <header class="header">
+        <a class="header__brand" href="/">СуперСвинки</a>
+        <nav class="nav" aria-label="Основная навигация">
+            <ul class="nav__list">
+                <li class="nav__item"><a class="nav__link" href="index.html">Главная</a></li>
+                <li class="nav__item"><a class="nav__link" href="about.html">О нас</a></li>
+                <li class="nav__item"><a class="nav__link nav__link--active" href="contacts.html">Контакты</a></li>
             </ul>
         </nav>
     </header>
 
-    <main>
-
-        <nav aria-label="Хлебные крошки">
-            <a href="index.html">Главная</a> →
-            <span>Контакты</span>
+    <main class="main">
+        <nav class="breadcrumbs" aria-label="Хлебные крошки">
+            <a class="breadcrumbs__link" href="index.html">Главная</a> →
+            <span class="breadcrumbs__current">Контакты</span>
         </nav>
 
         <h1>На данной странице Вы можете найти контакты</h1>
         
     </main>
 
-
-    <footer>
-        <p>&copy; 2025 Супер сайт. Все права защищены.</p>
+    <footer class="footer">
+        <p>&copy; 2025 СуперСвинки. Все права защищены.</p>
         <p>Телефон: +7 (905) 588-68-67</p>
     </footer>
 </body>
