paths were changed

--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>О нас - Супер сайт</title>
     <link rel="stylesheet" href="/src/styles.css">
-    <link rel="icon" href="assets/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/assets/favicon.ico" type="image/x-icon">
     <meta name="description" content="Узнайте больше о нашей компании и истории">
 </head>
 <body>
@@ -13,16 +13,16 @@
         <a class="header__brand" href="/">СуперСвинки</a>
         <nav class="nav" aria-label="Основная навигация">
             <ul class="nav__list">
-                <li class="nav__item"><a class="nav__link" href="index.html">Главная</a></li>
-                <li class="nav__item"><a class="nav__link nav__link--active" href="about.html">О нас</a></li>
-                <li class="nav__item"><a class="nav__link" href="contacts.html">Контакты</a></li>
+                <li class="nav__item"><a class="nav__link" href="/index.html">Главная</a></li>
+                <li class="nav__item"><a class="nav__link nav__link--active" href="/about.html">О нас</a></li>
+                <li class="nav__item"><a class="nav__link" href="/contacts.html">Контакты</a></li>
             </ul>
         </nav>
     </header>
 
     <main class="main">
         <nav class="breadcrumbs" aria-label="Хлебные крошки">
-            <a class="breadcrumbs__link" href="index.html">Главная</a> →
+            <a class="breadcrumbs__link" href="/index.html">Главная</a> →
             <span class="breadcrumbs__current">О нас</span>
         </nav>
 
