--- a/contacts.html
+++ b/contacts.html
@@ -20,7 +20,7 @@
 
     <main class="main">
         <nav class="breadcrumbs" aria-label="Хлебные крошки">
-            <a class="breadcrumbs__link" href="index.html">Главная</a> →
+            <a class="breadcrumbs__link" href="/index.html">Главная</a> →
             <span class="breadcrumbs__current">Контакты</span>
         </nav>
 
