paths were chandeg from / to ./

--- a/about.html
+++ b/about.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>О нас - Супер сайт</title>
-    <link rel="stylesheet" href="/src/styles.css">
-    <link rel="icon" href="/assets/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="./src/styles.css">
+    <link rel="icon" href="./assets/favicon.ico" type="image/x-icon">
     <meta name="description" content="Узнайте больше о нашей компании и истории">
 </head>
 <body>
