--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Главная - супер сайт про супер свинок</title>
     <meta name="description" content="Краткое описание главной страницы вашего сайта">
-    <link rel="stylesheet" href="/src/styles.css">
-    <script src="/src/main.js" defer></script>
-    <link rel="icon" href="/assets/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="./src/styles.css">
+    <script src="./src/main.js" defer></script>
+    <link rel="icon" href="./assets/favicon.ico" type="image/x-icon">
 </head>
 <body>
     <header class="header">
@@ -57,10 +57,10 @@
         <section class="gallery">
             <h2>Наши булочки</h2>
             <div class="gallery__grid">
-                <img src="/assets/images/piggy_lucy.jpg" alt="Свинка Люси" width="400" height="300" loading="lazy">
-                <img src="/assets/images/piggy_nero.jpg" alt="Свинка Неро" width="400" height="300" loading="lazy">
-                <img src="/assets/images/piggy_blanka.jpg" alt="Свинка Бланка" width="400" height="300" loading="lazy">
-                <img src="/assets/images/piggy_bonya.jpg" alt="Свинка Боня" width="400" height="300" loading="lazy">
+                <img src="./assets/images/piggy_lucy.jpg" alt="Свинка Люси" width="400" height="300" loading="lazy">
+                <img src="./assets/images/piggy_nero.jpg" alt="Свинка Неро" width="400" height="300" loading="lazy">
+                <img src="./assets/images/piggy_blanka.jpg" alt="Свинка Бланка" width="400" height="300" loading="lazy">
+                <img src="./assets/images/piggy_bonya.jpg" alt="Свинка Боня" width="400" height="300" loading="lazy">
             </div>
         </section>
 
