--- a/contacts.html
+++ b/contacts.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Контакты - супер сайт</title>
-    <link rel="stylesheet" href="/src/styles.css">
+    <link rel="stylesheet" href="./src/styles.css">
 </head>
 <body>
     <header class="header">
         <a class="header__brand" href="/">СуперСвинки</a>
         <nav class="nav" aria-label="Основная навигация">
             <ul class="nav__list">
-                <li class="nav__item"><a class="nav__link" href="index.html">Главная</a></li>
-                <li class="nav__item"><a class="nav__link" href="about.html">О нас</a></li>
-                <li class="nav__item"><a class="nav__link nav__link--active" href="contacts.html">Контакты</a></li>
+                <li class="nav__item"><a class="nav__link" href="/index.html">Главная</a></li>
+                <li class="nav__item"><a class="nav__link" href="/about.html">О нас</a></li>
+                <li class="nav__item"><a class="nav__link nav__link--active" href="/contacts.html">Контакты</a></li>
             </ul>
         </nav>
     </header>
