paths were changed from /... to ... in navigation

--- a/contacts.html
+++ b/contacts.html
@@ -11,16 +11,16 @@
         <a class="header__brand" href="/">СуперСвинки</a>
         <nav class="nav" aria-label="Основная навигация">
             <ul class="nav__list">
-                <li class="nav__item"><a class="nav__link" href="/index.html">Главная</a></li>
-                <li class="nav__item"><a class="nav__link" href="/about.html">О нас</a></li>
-                <li class="nav__item"><a class="nav__link nav__link--active" href="/contacts.html">Контакты</a></li>
+                <li class="nav__item"><a class="nav__link" href="index.html">Главная</a></li>
+                <li class="nav__item"><a class="nav__link" href="about.html">О нас</a></li>
+                <li class="nav__item"><a class="nav__link nav__link--active" href="contacts.html">Контакты</a></li>
             </ul>
         </nav>
     </header>
 
     <main class="main">
         <nav class="breadcrumbs" aria-label="Хлебные крошки">
-            <a class="breadcrumbs__link" href="/index.html">Главная</a> →
+            <a class="breadcrumbs__link" href="index.html">Главная</a> →
             <span class="breadcrumbs__current">Контакты</span>
         </nav>
 
