--- a/index.html
+++ b/index.html
@@ -17,20 +17,20 @@
         <nav class="nav" aria-label="Основная навигация">
             <ul class="nav__list">
                 <li class="nav__item">
-                    <a class="nav__link nav__link--active" href="/index.html">Главная</a>
+                    <a class="nav__link nav__link--active" href="index.html">Главная</a>
                 </li>
                 <li class="nav__item">
-                    <a class="nav__link" href="/about.html">О нас</a>
+                    <a class="nav__link" href="about.html">О нас</a>
                 </li>
                 <li class="nav__item">
-                    <a class="nav__link" href="/contacts.html">Контакты</a>
+                    <a class="nav__link" href="contacts.html">Контакты</a>
                 </li>
             </ul>
         </nav>
     </header>
 
     <nav class="breadcrumbs" aria-label="Хлебные крошки">
-        <a class="breadcrumbs__link" href="/index.html">Главная</a>
+        <a class="breadcrumbs__link" href="index.html">Главная</a>
         <span class="breadcrumbs__current">Текущая страница</span>
     </nav>
 
@@ -78,7 +78,7 @@
         <section id="contacts">
             <h2>Контактная информация</h2>
             <p>Наши контакты - голубиная почта</p>
-            <a href="/contacts.html">Подробнее</a>
+            <a href="contacts.html">Подробнее</a>
         </section>
     </main>
 
