--- a/contacts.html
+++ b/contacts.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header class="header">
-        <a class="header__brand" href="/">СуперСвинки</a>
+        <a class="header__brand" href="./">СуперСвинки</a>
         <nav class="nav" aria-label="Основная навигация">
             <ul class="nav__list">
                 <li class="nav__item"><a class="nav__link" href="index.html">Главная</a></li>
