--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header class="header">
-        <a class="header__brand" href="/">
+        <a class="header__brand" href="./">
             СуперСвинки
         </a>
         <nav class="nav" aria-label="Основная навигация">
